--- a/course-notes.tex
+++ b/course-notes.tex
@@ -2,331 +2,13 @@
 
 \usepackage{tbil-la}
 
-\usepackage[left=1in,right=1in,top=1in,bottom=1in]{geometry}
-
 \begin{document}
 
 
 
-\begin{readinessAssuranceOutcomes}
-\item Solve a system of linear equations (including finding a basis of the solution space if it is homogeneous) by interpreting as an augmented matrix and row reducing \standardList{E1, E2, E3, E4}.
-\item State the definition of linear independence, and determine if a set of vectors is linearly dependent or independent \standardList{V5}.
-\item State the definition of a spanning set, and determine if a set of vectors spans a vector space or subspace \standardList{V6, V7}.
-\item State the definition of a basis, and determine if a set of vectors is a basis \standardList{V8, V9}.
-\end{readinessAssuranceOutcomes}
-
-\begin{readinessAssuranceResources}
-\item TODO
-\end{readinessAssuranceResources}
-
-
-
-
-\begin{readinessAssuranceTest}
-
-\item Which of the following is a solution to the system of linear equations
-      \begin{align*}
-      x+3y-z    &=   2 \\
-      2x+8y+3z  &=  -1 \\
-      -x-y+9z   &= -10
-      \end{align*}
-
-\begin{multicols}{4}
-\begin{readinessAssuranceTestChoices}
-\item $\begin{bmatrix} 1 \\ 1 \\ 0 \end{bmatrix}$
-\item $\begin{bmatrix} 0 \\ 1 \\ -1 \end{bmatrix}$
-\item $\begin{bmatrix} 1 \\ 0 \\ -1 \end{bmatrix}$
-\item $\begin{bmatrix} 1 \\ -1 \\ 1 \end{bmatrix}$
-\end{readinessAssuranceTestChoices}
-\end{multicols}
-
-
-\item Find a basis for the solution set of the following homogeneous system of
-      linear equations
-      \begin{align*}
-      x+2y+-z-w    &= 0 \\
-      -2x-4y+3z+5w &= 0
-      \end{align*}
-
-\begin{multicols}{4}
-\begin{readinessAssuranceTestChoices}
-\item $\left\{ \begin{bmatrix} 2 \\ 1 \\ 0 \\ 0 \end{bmatrix}, \begin{bmatrix} 2 \\ 0 \\ 3 \\ 1 \end{bmatrix} \right\}$
-\item $\left\{ \begin{bmatrix} 2 \\ 2 \\ 0 \\ 0 \end{bmatrix}, \begin{bmatrix} 0 \\ 0 \\ 3 \\ 0 \end{bmatrix} \right\}$
-\item $\left\{ \begin{bmatrix} 2 \\ 1 \\ 3 \\ 1 \end{bmatrix} \right\}$
-\item None of these are a basis.
-\end{readinessAssuranceTestChoices}
-\end{multicols}
-
-
-\item Determine which property applies to the set of vectors $$\left\{ \begin{bmatrix}  1 \\ 0 \\ 0 \end{bmatrix}, \begin{bmatrix} 0 \\ 1 \\ 0 \end{bmatrix} \right\} \subset \IR^3.$$
-
-\begin{readinessAssuranceTestChoices}
-\item It does not span and is linearly dependent
-\item It does not span and is linearly independent
-\item It spans but it is linearly dependent
-\item It is a basis of $\IR^3$.
-\end{readinessAssuranceTestChoices}
-
-
-\item Determine which property applies to the set of vectors $$\left\{ \begin{bmatrix}  1 \\ 0 \\ 0 \end{bmatrix}, \begin{bmatrix} 2 \\ 1 \\ 0 \end{bmatrix} , \begin{bmatrix} 1 \\ 1 \\ 3 \end{bmatrix} \right\}\subset \IR^3.$$
-
-\begin{readinessAssuranceTestChoices}
-\item It does not span and is linearly dependent
-\item It does not span and is linearly independent
-\item It spans but it is linearly dependent
-\item It is a basis of $\IR^3$.
-\end{readinessAssuranceTestChoices}
-
-
-\item Determine which property applies to the set of vectors $$\left\{ \begin{bmatrix}  1 \\ 0 \\ 0 \end{bmatrix}, \begin{bmatrix} -2 \\ 0 \\ -2 \end{bmatrix} , \begin{bmatrix} 1 \\ 1 \\ 0 \end{bmatrix} , \begin{bmatrix} 3 \\ 3 \\ -3 \end{bmatrix}\right\}\subset \IR^3.$$
-
-\begin{readinessAssuranceTestChoices}
-\item It does not span and is linearly dependent
-\item It does not span and is linearly independent
-\item It spans but it is linearly dependent
-\item It is a basis of $\IR^3$.
-\end{readinessAssuranceTestChoices}
-
-
-\item Determine which property applies to the set of vectors $$\left\{ \begin{bmatrix}  2 \\ 2 \\ -1 \end{bmatrix}, \begin{bmatrix} -3 \\ 1 \\ -2 \end{bmatrix} , \begin{bmatrix} 1 \\ 5 \\ -4 \end{bmatrix}\right\}\subset \IR^3.$$
-
-\begin{readinessAssuranceTestChoices}
-\item It does not span and is linearly dependent
-\item It does not span and is linearly independent
-\item It spans but it is linearly dependent
-\item It is a basis of $\IR^3$.
-\end{readinessAssuranceTestChoices}
-
-
-\item Find a basis for the subspace of $\IR^4$ spanned by the vectors ...
-
-
-\item Suppose you know that every vector in $\IR^5$ can be written as a linear combination of the vectors $\{\vec{v}_1, \ldots, \vec{v}_n\}$.  What can you conclude about $n$?
-
-\begin{readinessAssuranceTestChoices}
-\item $n \leq 5$
-\item $n=5$
-\item $n \geq 5$
-\item $n$ could be any positive integer
-\end{readinessAssuranceTestChoices}
-
-\item Suppose you know that every vector in $\IR^5$ can be written uniquely as a linear combination of the vectors $\{\vec{v}_1, \ldots, \vec{v}_n\}$.  What can you conclude about $n$?
-
-\begin{readinessAssuranceTestChoices}
-\item $n \leq 5$
-\item $n=5$
-\item $n \geq 5$
-\item $n$ could be any positive integer
-\end{readinessAssuranceTestChoices}
-
-\item Suppose you know that every vector in $\IR^5$ can be written uniquely as a linear combination of the vectors $\{\vec{v}_1, \ldots, \vec{v}_n\}$.  What can you conclude about the set $\{\vec{v}_1, \ldots, \vec{v}_n\}$?
-
-\begin{readinessAssuranceTestChoices}
-\item It does not span and is linearly dependent
-\item It does not span and is linearly independent
-\item It spans but it is linearly dependent
-\item It is a basis of $\IR^3$.
-\end{readinessAssuranceTestChoices}
-
-\end{readinessAssuranceTest}
-
-
-
-\begin{applicationActivities}{Day 1}
-
-\begin{definition}
-A \term{linear transformation} is a map between vector spaces that preserves the vector space operations.  More precisely, if $V$ and $W$ are vector spaces, a map $T:V\rightarrow W$ is called a linear transformation if
-\begin{enumerate}
-\item $T(\vec{v}+\vec{w}) = T(\vec{v})+T(\vec{w})$ for any $\vec{v},\vec{w} \in V$
-\item $T(c\vec{v}) = cT(\vec{v})$ for any $c \in \IR$, $\vec{v} \in V$.
-\end{enumerate}
-In other words, a map is linear if one can do vector space operations before applying the map or after, and obtain the same answer.
-
-$V$ is called the \term{domain} of $T$ and $W$ is called the \term{co-domain} of $T$.
-\end{definition}
-
-\begin{activity}
-Determine if each of the following maps are linear transformations
-\begin{enumerate}[(a)]
-\item $T_1 : \IR^2 \rightarrow \IR$ given by $T_1\left(\begin{bmatrix} a \\ b \end{bmatrix} \right) = \sqrt{a^2+b^2}$
-\item $T_2 : \IR^3 \rightarrow \IR^2$ given by $T_2\left(\begin{bmatrix} x \\ y \\ z \end{bmatrix} \right) = \begin{bmatrix} x-z \\ y \end{bmatrix}$
-\item $T_3: \P_d \rightarrow \P_{d-1}$ given by $T_3(f(x)) = f^\prime(x)$.
-\item $T_4: C(\IR) \rightarrow C(\IR)$ given by $T_4(f(x)) = f(-x)$
-\item $T_5: \P \rightarrow \P$ given by $T_5(f(x)) = f(x)+x^2$
-\end{enumerate}
-\end{activity}
-
-\begin{activity}
-Suppose $T: \IR^3 \rightarrow \IR^2$ is a linear transformation, and you know $T\left(\begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} \right) = \begin{bmatrix} 2 \\ 1 \end{bmatrix} $ and $T\left(\begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix} \right) = \begin{bmatrix} -3 \\ 2 \end{bmatrix} $.  Compute each of the following:
-\begin{enumerate}[(a)]
-\item $T\left(\begin{bmatrix} 3 \\ 0 \\ 0 \end{bmatrix}\right)$
-\item $T\left(\begin{bmatrix} 0 \\ 0 \\ -2 \end{bmatrix}\right)$
-\item $T\left(\begin{bmatrix} 1 \\ 0 \\ 1 \end{bmatrix}\right)$
-\item $T\left(\begin{bmatrix} -2 \\ 0 \\ 5 \end{bmatrix}\right)$
-\end{enumerate}
-\end{activity}
-
-\begin{activity}
-Suppose $T: \IR^4 \rightarrow \IR^3$ is a linear transformation.  What is the smallest number of vectors needed to determine $T$?  In other words, what is the smallest number $n$ such that there are $\vec{v}_1,\ldots,\vec{v}_n \in \IR^4$ and given  $T(\vec{v}_1), \ldots, T(\vec{v}_n)$ you can determine $T(\vec{w})$ for \textit{any} $\vec{w} \in \IR^2$?
-\end{activity}
-
-\begin{observation}
-Fix an ordered basis for $V$.  Since every vector can be written \textit{uniquely} as a linear combination of basis vectors, a linear transformation $T:V \rightarrow W$ corresponds exactly to a choice of where each basis vector goes.  For convenience, we can thus encode a linear transformation as a matrix, with one column for the image of each basis vector (in order).
-\end{observation}
-
-\begin{activity}
-Let $T: \IR^3 \rightarrow \IR^2$ be a linear transformation with
-\begin{align*}
-T\left(\begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} \right) &= \begin{bmatrix} 3 \\ 2\end{bmatrix} &
-T\left(\begin{bmatrix} 0 \\ 1 \\ 0 \end{bmatrix} \right) &= \begin{bmatrix} -1 \\ 4\end{bmatrix} &
-T\left(\begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix} \right) &= \begin{bmatrix} 5 \\ 0\end{bmatrix}
-\end{align*}
-Write the matrix corresponding to this linear transformation with respect to the standard ordered basis.
-\end{activity}
-
-\begin{activity}
-  Let $T: \IR^3 \rightarrow \IR^2$ be a linear transformation with
-\begin{align*}
-T\left(\begin{bmatrix} 1 \\ 0 \\ 0 \end{bmatrix} \right) &= \begin{bmatrix} 3 \\ 2\end{bmatrix} &
-T\left(\begin{bmatrix} 0 \\ 1 \\ 0 \end{bmatrix} \right) &= \begin{bmatrix} -1 \\ 4\end{bmatrix} &
-T\left(\begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix} \right) &= \begin{bmatrix} 5 \\ 0\end{bmatrix}
-\end{align*}
-Write the matrix corresponding to this linear transformation with respect to the ordered basis
-\[\left\{ \begin{bmatrix} 2 & 1 & 1 \end{bmatrix} , \begin{bmatrix} -1 & -1 & 3 \end{bmatrix} , \begin{bmatrix} 0 & 1 & 2 \end{bmatrix} \right\}\]
-\end{activity}
-
-\begin{activity}
-Let $D: \P_3 \rightarrow \P_2$ be the derivative map (recall this is a linear transformation).  Write the matrix corresponding to $D$ with respect to the ordered basis $\{1,x,x^2,x^3\}$.
-\end{activity}
-
-\end{applicationActivities}
-
-
-
-\begin{applicationActivities}{Day 2}
-
-\begin{definition}
-Let $T: V \rightarrow W$ be a linear transformation.
-\begin{itemize}
-\item $T$ is called \term{injective} or \term{one-to-one} if $T$ does not map two distinct values to the same place.  More precisely, $T$ is injective if $T(\vec{v}) \neq T(\vec{w})$ whenever $\vec{v} \neq \vec{w}$.
-\item $T$ is called \term{surjective} or \term{onto} if every element of $W$ is mapped to by an element of $V$.  More precisely, for every $\vec{w} \in W$, there is some $v \in V$ with $T(\vec{v})=\vec{w}$.
-\end{itemize}
-\end{definition}
-
-\begin{activity}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$.  Determine if $T$ is injective, surjective, both, or neither.
-\end{activity}
-
-\begin{activity}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$.  Determine if $T$ is injective, surjective, both, or neither.
-\end{activity}
-
-\begin{definition}
-We also have two important sets called the \term{kernel} of $T$ and the \term{image} of $T$.
-\begin{align*}
-\ker T &= \left\{ \vec{v} \in V\ \big|\ T(\vec{v})=0\right\} \\
-\Im T &= \left\{ \vec{w} \in W\ \big|\ \text{there is some }v\in V \text{ with } T(\vec{v})=\vec{w}\right\}
-\end{align*}
-\end{definition}
-
-\begin{activity}
-Let $T: \IR^3 \rightarrow \IR^2$ be given by the matrix $\begin{bmatrix} 1 & 0 \\ 0 & 1 \\ 0 & 0 \end{bmatrix}$ (for the standard basis).  Find the kernel and image of $T$.
-\end{activity}
-
-\begin{activity}
-Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $\begin{bmatrix} 1 & 0 &0  \\ 0 & 1 & 0 \end{bmatrix}$ (for the standard basis).  Find the kernel and image of $T$.
-\end{activity}
-
-\begin{activity}
-Describe surjective linear transformations in terms of the image.
-\end{activity}
-
-\begin{activity}
-Describe injective linear transformations in terms of the kernel.
-\end{activity}
-
-\begin{activity}
-Let $T: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the matrix $A=\begin{bmatrix} 3 & 4 & -1 \\ 1 & 2 & 1 \end{bmatrix}$ (for the standard basis).
-\begin{enumerate}[1)]
-\item Write a system of equations whose solution set is the kernel.
-\item Compute $\RREF(A)$ and solve the system of equations.
-\item Compute the kernel of $T$
-\item Find a basis for the kernel of $T$
-\end{enumerate}
-\end{activity}
-
-\begin{activity}
-Let $S: \IR^3 \rightarrow \IR^2$ be the linear transformation given by the matrix $B=\begin{bmatrix} 3 & 4 & 1 \\ 1 & 2 & 4 \\ 5 & 8 & 9 \end{bmatrix}$ (for the standard basis).
-\begin{enumerate}[1)]
-\item Write a system of equations whose solution set is the kernel.
-\item Compute $\RREF(A)$ and solve the system of equations.
-\item Compute the kernel of $T$
-\item Find a basis for the kernel of $T$
-\end{enumerate}
-\end{activity}
-
-\begin{activity}
-Let $T: \IR^3 \rightarrow \IR^3$ be the linear transformation given by the matrix $A=\begin{bmatrix} 3 & 4 & -1 \\ 1 & 2 & 1 \end{bmatrix}$ (for the standard basis).
-\begin{enumerate}[1)]
-\item Find a set of vectors that span the image of $T$
-\item Find a basis for the image of $T$.
-\end{enumerate}
-\end{activity}
-
-\begin{activity}
-Let $S: \IR^3 \rightarrow \IR^3$ be the linear transformation given by the matrix $B=\begin{bmatrix} 3 & 4 & 1 \\ 1 & 2 & 4 \\ 5 & 8 & 9  \end{bmatrix}$ (for the standard basis).
-\begin{enumerate}[1)]
-\item Find a set of vectors that span the image of $T$
-\item Find a basis for the image of $T$.
-\end{enumerate}
-\end{activity}
-
-\end{applicationActivities}
-
-
-
-\begin{applicationActivities}{Day 3}
-
-\begin{activity}
-Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A \in M_{m,n}$ (for the standard basis).  Consider the following statements about $T$
-\begin{enumerate}[(a)]
-\item $T$ is injective
-\item $T$ is not injective
-\item $T$ is surjective
-\item $T$ is not surjective
-\item The system of linear equations given by the augmented matrix $\begin{bmatrix}[c|c]A & \vec{b} \end{bmatrix}$ has a solution for all $\vec{b} \in \IR^m$
-\item The system of linear equations given by the augmented matrix $\begin{bmatrix}[c|c]A & \vec{b} \end{bmatrix}$ has a unique solution for all $\vec{b} \in \IR^m$
-\item The system of linear equations given by the augmented matrix $\begin{bmatrix}[c|c] A & \vec{0} \end{bmatrix}$ has a non-trivial solution.
-\item The columns of $A$ span $\IR^m$
-\item The columns of $A$ are linearly independent
-\item The columns of $A$ are a basis of $\IR^m$
-\item Every column of $\RREF(A)$ is a pivot column
-\item $\RREF(A)$ has a non-pivot column
-\item $\RREF(A)$ has $n$ pivot columns
-\end{enumerate}
-Sort these statements into groups of equivalent statements.
-\end{activity}
-
-\begin{activity}
-Gallery walk--switch boards with a different team.  If they have two things grouped together that you know are not equivalent, write a reason or counter-example on a sticky note.
-\end{activity}
-
-\begin{activity}
-Update your team's groupings based on feedback.
-\end{activity}
-
-\begin{activity}
-Repeat?
-\end{activity}
-
-\begin{activity}
-Can you add any statements to any groups?
-\end{activity}
-
-\end{applicationActivities}
-
-
-
+\input{modules/4-A/index.tex}
+\input{modules/5-M/index.tex}
+\input{modules/6-G/index.tex}
 
 
 \end{document}
