--- a/tbil-la.sty
+++ b/tbil-la.sty
@@ -1,5 +1,20 @@
 \usepackage{enumerate,amssymb,tikz,amsmath,amsthm,multicol,hyperref}
 
+\usepackage[left=1in,right=1in,top=1in,bottom=1in,includeheadfoot]{geometry}
+
+
+\usepackage{fancyhdr}
+
+\newcommand{\header}{Test}
+\newcommand{\setHeader}[1]{\renewcommand{\header}{#1}}
+
+\pagestyle{fancy}
+\fancyhf{}
+\chead{\header}
+\rfoot{Page \thepage}
+\renewcommand{\headrulewidth}{0.5pt}
+\renewcommand{\footrulewidth}{0pt}
+
 \newcommand{\IR}{\mathbb{R}}
 \renewcommand{\P}{\mathcal{P}}
 \renewcommand{\Im}{{\rm Im\ }}
