add resource for 4-A

--- a/modules/4-A/readiness.tex
+++ b/modules/4-A/readiness.tex
@@ -9,7 +9,7 @@
 \end{readinessAssuranceOutcomes}
 
 \begin{readinessAssuranceResources}
-\item TODO
+\item Review the supporting Standards listed above.
 \end{readinessAssuranceResources}
 
 
