--- a/course-notes.tex
+++ b/course-notes.tex
@@ -6,6 +6,9 @@
 
 
 
+\input{modules/1-E/index.tex}
+% \input{modules/4-A/index.tex}
+% \input{modules/4-A/index.tex}
 \input{modules/4-A/index.tex}
 \input{modules/5-M/index.tex}
 \input{modules/6-G/index.tex}
