minimal subactivity environment

--- a/modules/4-A/day2.tex
+++ b/modules/4-A/day2.tex
@@ -36,11 +36,12 @@ Let $T: \IR^2 \rightarrow \IR^3$ be given by the matrix $\begin{bmatrix} 1 & 0 &
 \end{activity}
 
 \begin{activity}
-Describe surjective linear transformations in terms of the image.
-\end{activity}
-
-\begin{activity}
-Describe injective linear transformations in terms of the kernel.
+  \begin{subactivity}
+    Describe surjective linear transformations in terms of the image.
+  \end{subactivity}
+  \begin{subactivity}
+    Describe injective linear transformations in terms of the kernel.
+  \end{subactivity}
 \end{activity}
 
 \begin{activity}
