--- a/tbil-la.sty
+++ b/tbil-la.sty
@@ -86,3 +86,9 @@ Choose the most appropriate response for each question.
 \rule{6.5in}{0.2pt}
 \end{center}
 }
+
+\newenvironment{subactivity}{
+
+\textbf{Part X:}
+}{
+}
