--- a/modules/4-A/day1.tex
+++ b/modules/4-A/day1.tex
@@ -61,7 +61,7 @@ T\left(\begin{bmatrix} 0 \\ 1 \\ 0 \end{bmatrix} \right) &= \begin{bmatrix} -1 \
 T\left(\begin{bmatrix} 0 \\ 0 \\ 1 \end{bmatrix} \right) &= \begin{bmatrix} 5 \\ 0\end{bmatrix}
 \end{align*}
 Write the matrix corresponding to this linear transformation with respect to the ordered basis
-\[\left\{ \begin{bmatrix} 2 & 1 & 1 \end{bmatrix} , \begin{bmatrix} -1 & -1 & 3 \end{bmatrix} , \begin{bmatrix} 0 & 1 & 2 \end{bmatrix} \right\}\]
+\[\left\{ \begin{bmatrix} 2 \\ 1 \\ 1 \end{bmatrix} , \begin{bmatrix} -1 \\ -1 \\ 3 \end{bmatrix} , \begin{bmatrix} 0 \\ 1 \\ 2 \end{bmatrix} \right\}\]
 \end{activity}
 
 \begin{activity}
