--- a/modules/4-A/day3.tex
+++ b/modules/4-A/day3.tex
@@ -4,7 +4,9 @@
 \begin{applicationActivities}{Day 3}
 
 \begin{activity}
-Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A \in M_{m,n}$ (for the standard basis).  Consider the following statements about $T$
+Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A \in M_{m,n}$ (for the standard basis).  You have cards containing a number of statements about $T$ and $A$.  Sort them into groups of equivalent statements, and post them on your board.
+
+\begin{TBLnote}Card sort activity for 10-15 minutes: cards contain the following
 \begin{enumerate}[(a)]
 \item $T$ is injective
 \item $T$ is not injective
@@ -20,23 +22,16 @@ Let $T: \IR^n \rightarrow \IR^m$ be a linear map with matrix $A \in M_{m,n}$ (fo
 \item $\RREF(A)$ has a non-pivot column
 \item $\RREF(A)$ has $n$ pivot columns
 \end{enumerate}
-Sort these statements into groups of equivalent statements.
+\end{TBLnote}
 \end{activity}
 
 \begin{activity}
-Gallery walk--switch boards with a different team.  If they have two things grouped together that you know are not equivalent, write a reason or counter-example on a sticky note.
+\begin{TBLnote}Gallery walk \end{TBLnote}
+Cycle around the room counter-clockwise.  If they have two things grouped together that you know are not equivalent, write a reason or counter-example on a sticky note.
 \end{activity}
 
 \begin{activity}
-Update your team's groupings based on feedback.
-\end{activity}
-
-\begin{activity}
-Repeat?
-\end{activity}
-
-\begin{activity}
-Can you add any statements to any groups?
+Come up with as many statements as you can, and add them to the appropriate group.
 \end{activity}
 
 \end{applicationActivities}
