write out module 1 through REF

--- a/modules/1-E/readiness.tex
+++ b/modules/1-E/readiness.tex
@@ -26,33 +26,10 @@
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item
-\begin{tikzpicture}[scale=0.3]
-\draw[thin,gray,<->] (-5,0) -- (5,0);
-\draw[thin,gray,<->] (0,-5) -- (0,5);
-\draw[thick,blue] (-5,4.5) -- (5,-0.5);
-\draw[thick,red] (-5,-3.67) -- (5,3);
-\end{tikzpicture}
-\item
-\begin{tikzpicture}[scale=0.3]
-\draw[thin,gray,<->] (-5,0) -- (5,0);
-\draw[thin,gray,<->] (0,-5) -- (0,5);
-\draw[thick,blue] (-5,-3) -- (5,-0.5);
-\draw[thick,red] (-5,-4) -- (5,2);
-\end{tikzpicture}
-\item
-\begin{tikzpicture}[scale=0.3]
-\draw[thin,gray,<->] (-5,0) -- (5,0);
-\draw[thin,gray,<->] (0,-5) -- (0,5);
-\draw[thick,purple] (-3,5) -- (5,-4);
-\end{tikzpicture}
-\item
-\begin{tikzpicture}[scale=0.3]
-\draw[thin,gray,<->] (-5,0) -- (5,0);
-\draw[thin,gray,<->] (0,-5) -- (0,5);
-\draw[thick,blue] (3,-5) -- (1,5);
-\draw[thick,red] (0,-5) -- (-2,5);
-\end{tikzpicture}
+\item \systemWithOneSolutionA
+\item \systemWithOneSolutionB
+\item \systemWithInfinitelyManySolutions
+\item \systemWithNoSolutions
 \end{readinessAssuranceTestChoices}
 \end{multicols}
 
@@ -60,12 +37,7 @@
 \item How many solutions are there for the system of linear equations
       represented by the following graph?
     \begin{center}
-      \begin{tikzpicture}[scale=0.3]
-      \draw[thin,gray,<->] (-5,0) -- (5,0);
-      \draw[thin,gray,<->] (0,-5) -- (0,5);
-      \draw[thick,blue] (-5,-3) -- (5,-0.5);
-      \draw[thick,red] (-5,-4) -- (5,2);
-      \end{tikzpicture}
+      \systemWithOneSolutionB
     \end{center}
 
 \begin{multicols}{4}
@@ -82,11 +54,7 @@
       represented by the following graph? (This graph represents two completely
       overlapping lines.)
     \begin{center}
-      \begin{tikzpicture}[scale=0.3]
-      \draw[thin,gray,<->] (-5,0) -- (5,0);
-      \draw[thin,gray,<->] (0,-5) -- (0,5);
-      \draw[thick,purple] (-3,5) -- (5,-4);
-      \end{tikzpicture}
+      \systemWithInfinitelyManySolutions
     \end{center}
 
 \begin{multicols}{4}
@@ -103,12 +71,7 @@
       represented by the following graph? (This graph represents two
       parallel lines.)
     \begin{center}
-      \begin{tikzpicture}[scale=0.3]
-      \draw[thin,gray,<->] (-5,0) -- (5,0);
-      \draw[thin,gray,<->] (0,-5) -- (0,5);
-      \draw[thick,blue] (3,-5) -- (1,5);
-      \draw[thick,red] (0,-5) -- (-2,5);
-      \end{tikzpicture}
+      \systemWithNoSolutions
     \end{center}
 
 \begin{multicols}{4}
