--- a/tbil-la.sty
+++ b/tbil-la.sty
@@ -21,7 +21,9 @@
 \theoremstyle{definition}
 \newtheorem*{definition}{Definition}
 \newtheorem*{example}{Example}
+\newtheorem*{fact}{Fact}
 \newtheorem*{observation}{Observation}
+\newtheorem*{remark}{Remark}
 \newtheorem*{activityRaw}{Activity}
 \DeclareMathOperator{\RREF}{RREF}
 \makeatletter
@@ -39,6 +41,17 @@
 \section*{Readiness Assurance Outcomes}
 
 Before beginning this module, each student should be able to...
+\begin{itemize}
+}{
+\end{itemize}
+}
+
+
+\newenvironment{moduleStandards}{
+\newpage
+\section*{Standards for this Module}
+
+At the end of this module, each student should be able to...
 \begin{itemize}
 }{
 \end{itemize}
