--- a/tbil-la.sty
+++ b/tbil-la.sty
@@ -121,4 +121,4 @@ Choose the most appropriate response for each question.
 
 %This is for making instructor notes about running the activity (e.g. card sort, gallery walk...)
 \newenvironment{TBLnote}
-{\color{blue}}{}
+{\color{blue} \textbf{(Instructor Note:)}}{}
