--- a/modules/1-E/day1.tex
+++ b/modules/1-E/day1.tex
@@ -8,7 +8,23 @@ A \term{linear equation} is an equation of the variables \(x_i\) of the form
 \[
 a_1x_1+a_2x_2+\dots+a_nx_n=b
 .\]
-A \term{solution} \((s_1,s_2,\dots,s_n)\) for a linear equation satisfies
+A \term{solution}
+for a linear equation is expressed in terms of the Euclidean vectors
+\[
+  \begin{bmatrix}
+    x_1 \\
+    x_2 \\
+    \vdots \\
+    x_n
+  \end{bmatrix}=
+  \begin{bmatrix}
+    s_1 \\
+    s_2 \\
+    \vdots \\
+    s_n
+  \end{bmatrix}
+\]
+and must satisfy
 \[
 a_1s_1+a_2s_2+\dots+a_ns_n=b
 .\]
@@ -44,7 +60,22 @@ is a collection of one or more linear equations.
      \vdots&  &\vdots&   &&  &\vdots&&\vdots  \\
     a_{m1}x_1 &\,+\,& a_{m2}x_2 &\,+\,& \dots  &\,+\,& a_{mn}x_n &\,=\,& b_m
   \end{alignat*}
-A \term{solution} \((s_1,s_2,\dots,s_n)\) for a linear system satisfies
+A \term{solution}
+\[
+  \begin{bmatrix}
+    x_1 \\
+    x_2 \\
+    \vdots \\
+    x_n
+  \end{bmatrix}=
+  \begin{bmatrix}
+    s_1 \\
+    s_2 \\
+    \vdots \\
+    s_n
+  \end{bmatrix}
+\]
+for a linear system satisfies
 \[
 a_{i1}s_1+a_{i2}s_2+\dots+a_{in}s_n=b_i
 \]
@@ -105,7 +136,7 @@ in the system).
 \end{activity}
 
 \begin{activity}
-  All inconsistent linear systems contain a \term{contradiction}.
+  All inconsistent linear systems contain a logical \term{contradiction}.
   Find a contradiction in this system by solving for \(x_1\) in the first
   equation, substituting the resulting expression into the
   second equation, and then simplifying.
@@ -122,13 +153,93 @@ in the system).
   2x_1-4x_2  &=  6
   \end{align*}
 \begin{subactivity}
-  Find three different solutions for this system.
+  Find three different solutions
+  \(
+    \begin{bmatrix}
+      x_1 \\
+      x_2
+    \end{bmatrix}=
+    \begin{bmatrix}
+      r_1 \\
+      r_2
+    \end{bmatrix},
+    \begin{bmatrix}
+      s_1 \\
+      s_2
+    \end{bmatrix},
+    \begin{bmatrix}
+      t_1 \\
+      t_2
+    \end{bmatrix}
+  \)
+  for this system.
 \end{subactivity}
 \begin{subactivity}
-  Find a formula for \(x_1\) in terms of \(x_2\) that describes all possible
-  solutions for this system. Then use it to
-  verify the three different solutions you found in the previous activity.
+  Let \(x_2=a\) where \(a\) is an arbitrary real number, then find an
+  expression for \(x_1\) in terms of \(a\). Use this to describe \textit{all}
+  solutions (the \term{solution set})
+  \(
+    \begin{bmatrix}
+      x_1 \\
+      x_2
+    \end{bmatrix}=
+    \begin{bmatrix}
+      ? \\
+      a
+    \end{bmatrix}
+  \)
+  for the linear system in terms of \(a\).
 \end{subactivity}
+\end{activity}
+
+\begin{remark}
+  The solution set to a consistent linear system with infinitely many solutions
+  may be described by setting
+  certain variables equal to arbitrary parameters, and expressing the
+  other variables in terms of those parameters.
+\end{remark}
+
+\begin{activity}
+  Consider the following linear system.
+  \begin{alignat*}{5}
+    x_1 &\,+\,& 2x_2 &\, \,&     &\,-\,&  x_4 &\,=\,& 3 \\
+        &\, \,&      &\, \,& x_3 &\,+\,& 4x_4 &\,=\,& -2
+  \end{alignat*}
+  Describe the solution set
+  \[
+    \begin{bmatrix}
+      x_1 \\
+      x_2 \\
+      x_3 \\
+      x_4
+    \end{bmatrix}=
+    \begin{bmatrix}
+      ? \\
+      a \\
+      ? \\
+      b
+    \end{bmatrix}=
+    a\begin{bmatrix}
+      ? \\
+      1 \\
+      ? \\
+      0
+    \end{bmatrix}+
+    b\begin{bmatrix}
+      ? \\
+      0 \\
+      ? \\
+      1
+    \end{bmatrix}+
+    \begin{bmatrix}
+      t_1 \\
+      0 \\
+      t_3 \\
+      0
+    \end{bmatrix}
+  \] to the linear system
+  by setting \(x_2=a\) and \(x_4=b\), and then solving for \(x_1\) and
+  \(x_3\).
 \end{activity}
 
 \begin{observation}
@@ -454,8 +565,7 @@ in the system).
     \item Add \(-5R_3\) to \(R_1\).
     \item Add \(R_2\) to \(R_1\).
   \end{enumerate}
-  This shows that the original linear system is consistent with a single
-  solution \((x_1,x_2,x_3)=(-2,7,2)\).
+  Then write the solution to the linear system.
 \end{activity}
 
 \begin{activity}
@@ -532,10 +642,11 @@ in the system).
 
 \begin{definition}
   The columns of \(\RREF(A)\) without a leading term represent
-  \term{free variables} of the linear system modeled by \(A\).
-  The other \term{bounded variables} can be expressed in terms of free
-  variables to
-  represent all possible solutions to the linear system modeled by \(A\).
+  \term{free variables} of the linear system modeled by \(A\)
+  that may be set equal to arbitrary parameters.
+  The other \term{bounded variables} can then be expressed in terms
+  of those parameters to describe the solution set
+  to the linear system modeled by \(A\).
 \end{definition}
 
 \begin{activity}
@@ -562,9 +673,30 @@ in the system).
     \end{bmatrix}
   \]
   \end{multicols}
-  describe all solutions to the linear system by setting each of the
+  describe the solution set
+  \(
+    \begin{bmatrix}
+      x_1 \\
+      x_2 \\
+      x_3 \\
+      x_4
+    \end{bmatrix}=
+    a\begin{bmatrix}
+      r_1 \\
+      r_2 \\
+      r_3 \\
+      r_4
+    \end{bmatrix}+
+    \begin{bmatrix}
+      s_1 \\
+      s_2 \\
+      s_3 \\
+      s_4
+    \end{bmatrix}
+  \) to the linear system by setting the free variable
+  \(x_3=a\), and then expressing each of the
   bounded variables \(x_1,x_2,x_4\) equal to an expression in terms
-  of the free variable \(x_3\).
+  of \(a\).
 \end{activity}
 
 \begin{remark}
@@ -607,9 +739,103 @@ in the system).
 
 \begin{activity}
   Prove that all homogeneous systems are consistent.
-  (Hint: Find an obvious solution that satisfies every homogeneous
+  (Hint: Find an obvious solution
+  \(
+    \begin{bmatrix}
+      x_1 \\
+      x_2 \\
+      \vdots \\
+      x_n
+    \end{bmatrix}=
+    \begin{bmatrix}
+      s_1 \\
+      s_2 \\
+      \vdots \\
+      s_n
+    \end{bmatrix}
+  \) that satisfies every homogeneous
   system.)
 \end{activity}
+
+\begin{fact}
+  The solution set to any homogeneous system with infinitely-many solutions
+  is generated by multiplying the parameters representing the free variables
+  by Euclidean vectors, and adding these up. For example:
+  \[
+    \begin{bmatrix}
+      x_1 \\
+      x_2 \\
+      x_3 \\
+      x_4
+    \end{bmatrix}=
+    a\begin{bmatrix}
+      3 \\
+      1 \\
+      -1 \\
+      0
+    \end{bmatrix}+
+    b\begin{bmatrix}
+      0 \\
+      0 \\
+      0 \\
+      1
+    \end{bmatrix}
+  \]
+\end{fact}
+
+\begin{definition}
+  A set of Euclidean vectors generating the solution set to a homogeneous
+  system is called a \textbf{basis} for the solution
+  set of the homogeneous system. For example:
+  \begin{multicols}{2}\noindent
+  \[
+    \begin{bmatrix}
+      x_1 \\
+      x_2 \\
+      x_3 \\
+      x_4
+    \end{bmatrix}=
+    a\begin{bmatrix}
+      3 \\
+      1 \\
+      -1 \\
+      0
+    \end{bmatrix}+
+    b\begin{bmatrix}
+      0 \\
+      0 \\
+      0 \\
+      1
+    \end{bmatrix}
+  \]
+  \[
+    \textrm{Basis}=\left\{
+    \begin{bmatrix}
+      3 \\
+      1 \\
+      -1 \\
+      0
+    \end{bmatrix},
+    \begin{bmatrix}
+      0 \\
+      0 \\
+      0 \\
+      1
+    \end{bmatrix}\right\}
+  \]
+  \end{multicols}
+\end{definition}
+
+\begin{activity}
+  Find a basis for the solution set of the following homogeneous linear
+  system.
+  \begin{alignat*}{5}
+    x_1 &\,+\,& 2x_2 &\, \,&     &\,-\,&  x_4 &\,=\,& 0 \\
+        &\, \,&      &\, \,& x_3 &\,+\,& 4x_4 &\,=\,& 0 \\
+   2x_1 &\,+\,& 4x_2 &\,+\,& x_3 &\,+\,& 2x_4 &\,=\,& 0 \\
+  \end{alignat*}
+\end{activity}
+
 
 
 
