--- a/modules/1-E/readiness.tex
+++ b/modules/1-E/readiness.tex
@@ -91,8 +91,28 @@
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item \((x,y)=(-1,3)\)
-\item \((x,y)=(4,-2)\)
+\item
+\(
+  \begin{bmatrix}
+    x_1 \\
+    x_2
+  \end{bmatrix}=
+  \begin{bmatrix}
+    -1 \\
+    3
+  \end{bmatrix}
+\)
+\item
+\(
+  \begin{bmatrix}
+    x_1 \\
+    x_2
+  \end{bmatrix}=
+  \begin{bmatrix}
+    4 \\
+    -2
+  \end{bmatrix}
+\)
 \item There are no solutions.
 \item There are infinitely-many solutions.
 \end{readinessAssuranceTestChoices}
@@ -106,8 +126,28 @@
 
 \begin{multicols}{4}
 \begin{readinessAssuranceTestChoices}
-\item \((x,y)=(-1,4)\)
-\item \((x,y)=(2,1)\)
+\item
+\(
+  \begin{bmatrix}
+    x_1 \\
+    x_2
+  \end{bmatrix}=
+  \begin{bmatrix}
+    -1 \\
+    4
+  \end{bmatrix}
+\)
+\item
+\(
+  \begin{bmatrix}
+    x_1 \\
+    x_2
+  \end{bmatrix}=
+  \begin{bmatrix}
+    2 \\
+    1
+  \end{bmatrix}
+\)
 \item There are no solutions.
 \item There are infinitely-many solutions.
 \end{readinessAssuranceTestChoices}
